@@ -1,4 +1,7 @@
 2005-06-27  Kazuhiko  <kazuhiko@fdiary.net>
+	* misc/plugin/rss-show.rb: use 'rss-show/' directory under the
+	cache path.
+
 	* hiki/config.rb (load): mkdir a cache path if not exists.
 
 	* misc/plugin/readlirs.rb: use 'readlirs/' directory under the
